sendMessage endpoint defined
Documetation updated
